@startuml 1

class Being

class Creature {

    int health
    int attack
    int defense
    String[] memory

    speakTo()
    listen()
    thrown()
    pick()
    eat()
    drool()
    move()
}



class Monster{
    int magic
    fly()
}

Creature --|>  Being


Human --|> Creature

Monster --|> Creature

Gourd --|> Creature

GourdHuman --|> Creature



@enduml